# multimodal-rag-app

./: .pdm-python  Dockerfile  pyproject.toml  requirements.txt
src/api/: chroma_utils.py  crewAI_utils.py  db_utils.py  langchain_utils.py  main.py  multimodal_pipeline.py  ollama_utils.py  pydantic_models.py  responsible_ai.py
src/app/: chat_interface.py  chat_interface_v1.py  display_frmt.py  sidebar.py  streamlit_app.py
src/prcsd_docs/docling/Actuators - Functions and control/: temp_Actuators_-_Functions_and_control.md
src/prcsd_docs/docling/Actuators - Handling/: temp_Actuators_-_Handling.md
src/prcsd_docs/docling/Manual fr RAG/: temp_Manual_fr_RAG.md
src/scratchpad/: answer_evaluator.ipynb  cache.ipynb  chroma_utils - older0001.py  conversation_agent_langchain.ipynb  get_source_doc.ipynb  langchain_validation.ipynb  langgraph.ipynb  langgraph_agentic_rag.ipynb  ollama_utils.py  streamlit_image_display.py
src/sqlite_db/: rag_app.db
src/vector_dbs/baseline_retriver/: chroma.sqlite3
src/vector_dbs/cache_docs/: 4d5f2711-ffe0-4bd6-a94b-72e583c5cf84  904fd9f1-cba3-4160-87d2-b4c68277f76c
src/vector_dbs/cache_vector_db/: chroma.sqlite3
src/vector_dbs/chroma_db/: chroma.sqlite3
src/vector_dbs/multi_vector_img_db/: chroma.sqlite3
src/vector_dbs/multi_vector_text/: chroma.sqlite3
